-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18, 19
-
Component/s: hotspot
-
b33
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8280335 | 19 | Aleksey Shipilev | P3 | Resolved | Fixed | b07 |
| JDK-8280668 | 18.0.1 | Aleksey Shipilev | P3 | Resolved | Fixed | b04 |
| JDK-8295482 | 17.0.6 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-core_libjvm_objs_macroAssembler_aarch64.o:
/home/shade/shipilev-jdk/src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp: In member function 'u_char* MacroAssembler::zero_words(Register, Register)':
/home/shade/shipilev-jdk/src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp:4728:27: error: incomplete type 'ciEnv' used in nested name specifier
&& (task = ciEnv::current()->task())
^~~~~~~
* For target hotspot_variant-core_libjvm_objs_macroAssembler_aarch64.o:
/home/shade/shipilev-jdk/src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp: In member function 'u_char* MacroAssembler::zero_words(Register, Register)':
/home/shade/shipilev-jdk/src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp:4728:27: error: incomplete type 'ciEnv' used in nested name specifier
&& (task = ciEnv::current()->task())
^~~~~~~
- backported by
-
JDK-8280335 AArch64 "core" variant does not build after JDK-8270947
-
- Resolved
-
-
JDK-8280668 AArch64 "core" variant does not build after JDK-8270947
-
- Resolved
-
-
JDK-8295482 AArch64 "core" variant does not build after JDK-8270947
-
- Resolved
-
- relates to
-
JDK-8270947 AArch64: C1: use zero_words to initialize all objects
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/2012a98a
-
Commit
openjdk/jdk18/28e02fa2
-
Review
openjdk/jdk17u-dev/796
-
Review
openjdk/jdk18/108
(3 links to)