8280234: AArch64 "core" variant does not build after JDK-8270947

Reviewed-by: adinn, aph